# threads-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main_loop.py  pyproject.toml  requirements.txt  screenshot_threads.py
src/: main_loop.py  record_login.py  screenshot.py  screenshot_ig.py  screenshot_threads.py
